# WakuwakuYoutubeAPI

./: app.py  main.py  models.py  pyproject.toml
cli/: main.py
templates/: index.html  youtube_list.html
